# shine

./: .gitignore  Android.mk  ChangeLog  Makefile  Makefile.am  README.md  bootstrap  configure.ac  libshine.sym  shine.h  shine.pc.in  shine.sln  shine.vcxproj  shineenc.vcxproj
.github/workflows/: c-cpp.yml  ci.yml
android/: Binary.mk  Library.mk
debian/: control  copyright  rules  shineenc.install
js/: .npmignore  .prettierignore  .prettierrc  Makefile  README.md  libshine.d.ts  package-lock.json  package.json  post.js  test.ts  tsconfig.json  wrapper.c
js/src/: libshine_browser_wrapper.js  libshine_class.js  libshine_node_wrapper.js  post.js  pre.js  wrapper.c
js/test/: package.json  test.coffee
js/test/browser/: Makefile  encode.js  index.html  libshine.js  libshine.wasm  libshine_node.js  rounds.js
js/test/lib/: rounds.js
js/test/nextjs/: .prettierignore  .prettierrc  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
js/test/nextjs/lib/: encode.ts  rounds.ts
js/test/nextjs/pages/: index.tsx
js/test/node/: encode.coffee  encode.ts  package-lock.json  package.json  pnpm-lock.yaml  rounds.coffee  rounds.ts  tsconfig.json
src/: INSTALL  L3SubBand.c  L3bitstrea.c  L3loop.c  L3loop.h  L3mdct.c  L3mdct.h  L3subband.h  Layer3.c  Layer3.h  Main.c  Makefile  Makefile-ezx  Makefile-generic  Makefile.am  README  bitstream.c  bitstream.h  formatbits.c  formatbits.h  g_includes.h  huffman.c  huffman.h  l3bitstream.c  l3loop.c  l3mdct.c  l3subband.c  layer3.h  main.c  mult_noarch_gcc.h  mult_sarm_gcc.h  reservoir.c  reservoir.h  tables.c  tables.h  types.h  wave.c
src/lib/: bitstream.c  bitstream.h  formatbits.c  formatbits.h  g_includes.h  huffman.c  huffman.h  l3bitstream.c  l3bitstream.h  l3loop.c  l3loop.h  l3mdct.c  l3mdct.h  l3subband.c  l3subband.h  layer3.c  layer3.h  mult_mips_gcc.h  mult_noarch_gcc.h  mult_sarm_gcc.h  priv_layer3.h  priv_types.h  reservoir.c  reservoir.h  tables.c  tables.h  types.h  wave.h
src/unused/: mult.s  mult_SA.s  riscos.c
